--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 			referrerpolicy="no-referrer"
 		></script>
 
+		<script src="js/utils/MouseHandler.js"></script>
+		<script src="js/utils/AnimationHandler.js"></script>
+
 		<script src="js/core/Tile.js"></script>
 		<script src="js/core/Grid.js"></script>
 		<script src="js/core/Seeker.js"></script>
